--- a/Email-Sender/readme
+++ b/Email-Sender/readme
@@ -1,2 +1,2 @@
-# Email Sender
-A program to programmatically trigger an email. Be sure to add particular dependencies in the pom.xml file
+# Email-Sender
+A program to programmatically trigger an email. Be sure to add particular dependencies in the pom.xml file.
